CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (cshell)

SET (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
FIND_PACKAGE (Readline)

CONFIGURE_FILE (${CMAKE_CURRENT_SOURCE_DIR}/Config.h.in
	${CMAKE_CURRENT_SOURCE_DIR}/Config.h)

INCLUDE_DIRECTORIES (${CMAKE_INCLUDE_DIR})
ADD_EXECUTABLE (cshell
	src/main.cxx)
TARGET_LINK_LIBRARIES (cshell
	${READLINE_LIBRARY})
